About to tear out AWS IoT and add GraphQL

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -12,5 +12,22 @@
 			"service": "S3AndCloudFront",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"api": {
+		"colorpicker": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"authConfig": {
+					"additionalAuthenticationProviders": [],
+					"defaultAuthentication": {
+						"authenticationType": "AMAZON_COGNITO_USER_POOLS",
+						"userPoolConfig": {
+							"userPoolId": "authcolorpicker28dbcb28"
+						}
+					}
+				}
+			}
+		}
 	}
 }
