--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-color": "^2.18.0",
     "react-dom": "^16.13.1",
+    "react-input-range": "^1.3.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
