so much stuff. added lambda custom resolver functions to communicate with AWS IoT, added some structure around the lightmanager ui. added an on/off button.

--- a/amplify/backend/auth/colorpicker28dbcb28/colorpicker28dbcb28-cloudformation-template.yml
+++ b/amplify/backend/auth/colorpicker28dbcb28/colorpicker28dbcb28-cloudformation-template.yml
@@ -85,8 +85,29 @@ Parameters:
                       
   userPoolGroupList:
     Type: CommaDelimitedList
-                          
+              
   dependsOn:
+    Type: CommaDelimitedList
+        
+  thirdPartyAuth:
+    Type: String
+              
+  userPoolGroups:
+    Type: String
+              
+  adminQueries:
+    Type: String
+            
+  triggers:
+    Type: String
+                
+  hostedUI:
+    Type: String
+                              
+  parentStack:
+    Type: String
+                
+  permissions:
     Type: CommaDelimitedList
     
 Conditions:
@@ -163,6 +184,18 @@ Resources:
         SnsCallerArn: !GetAtt SNSRole.Arn
         ExternalId: colorp28dbcb28_role_external_id
     
+  
+    
+    
+  
+    
+    
+  
+  
+   
+    
+  # Updating lambda role with permissions to Cognito
+  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
