--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react": "^16.13.1",
     "react-color": "^2.18.0",
     "react-dom": "^16.13.1",
+    "react-grid-system": "^6.3.1",
     "react-input-range": "^1.3.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-toggle-component": "^3.0.8",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
