--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-amplify-react": "^3.1.8",
     "aws-iot-device-sdk": "^2.2.3",
     "aws-sdk": "^2.648.0",
+    "package.json": "^2.0.1",
     "react": "^16.13.1",
     "react-color": "^2.18.0",
     "react-dom": "^16.13.1",
