--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-input-range": "^1.3.0",
     "react-scripts": "3.4.1",
     "react-toggle-component": "^3.0.8",
+    "react-twitch-embed-video": "^2.0.2",
     "styled-components": "^5.1.0"
   },
   "scripts": {
